# verificador_cv

./: .platform.app.yaml  README.md  main.py  pyproject.toml  requirements.txt  requiriments.txt
data/: palabras_clave.txt
