[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["rotany <rotany38@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1"
blinker = "^1.7.0"
click = "^8.1.7"
colorama = "^0.4.6"
Flask = "^3.0.0"
gunicorn = "^21.2.0"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.3"
packaging = "^23.2"
PyPDF2 = "^3.0.1"
Werkzeug = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
